Fixed overflow body hidden

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,5 +2,7 @@
 
 * {
     margin: 0px;
+    overflow-x: hidden;
+
     /* padding: 10px; */
 }
